fix: remove unnecessary vars

--- a/jinja2-testing.ipynb
+++ b/jinja2-testing.ipynb
@@ -26,11 +26,7 @@
        " '--cmd',\n",
        " \"select count(*),{{ti.xcom_pull('write-xcom')['count']}} from ODS_NSOFT.PRODUCTS where ins_timestamp < date('{{ti.xcom_pull(task_ids='var_ts')['ts']}}');\",\n",
        " '--arbitrary-args',\n",
-       " 'START_DATE={{(execution_date + macros.dateutil.relativedelta.relativedelta(days=+1)).replace(day=1, hour=10, minute=0, second =0, microsecond = 0)}}',\n",
-       " '--script-name',\n",
-       " 'tran-dwh-offer-dimensions_scd-group-tran-dwh-offer-dimensions_{{',\n",
-       " 'execution_date',\n",
-       " '}}.sql']"
+       " 'START_DATE={{(execution_date + macros.dateutil.relativedelta.relativedelta(days=+1)).replace(day=1, hour=10, minute=0, second =0, microsecond = 0)}}']"
       ]
      },
      "execution_count": 1,
@@ -53,18 +49,13 @@
     "'--cmd': \"\\\"select count(*),{{ti.xcom_pull('write-xcom')['count']}} from ODS_NSOFT.PRODUCTS where ins_timestamp < date('{{ti.xcom_pull(task_ids='var_ts')['ts']}}');\\\"\",\n",
     "'--arbitrary-args' : \"\\\"START_DATE={{(execution_date + macros.dateutil.relativedelta.relativedelta(days=+1)).replace(day=1, hour=10, minute=0, second =0, microsecond = 0)}}\\\"\"\n",
     "    }\n",
-    "script_name = \"{}_{}_{}.sql\".format(\n",
-    "    \"tran-dwh-offer-dimensions\", \"scd-group-tran-dwh-offer-dimensions\", \"{{ execution_date }}\"\n",
-    ")\n",
-    "scd_params = dict(args)\n",
-    "scd_params[\"--script-name\"] = script_name\n",
     "\n",
     "def get(exec_cmd) -> List[str]:\n",
-    "    return exec_cmd + args_to_list(scd_params)\n",
+    "    return exec_cmd + args_to_list(args)\n",
     "\n",
     "\n",
     "def args_to_list(args) -> List[str]:\n",
-    "    args_to_str = \" \".join([f\"{k} {v}\" for k, v in scd_params.items()])\n",
+    "    args_to_str = \" \".join([f\"{k} {v}\" for k, v in args.items()])\n",
     "    return shlex.split(args_to_str)\n",
     "\n",
     "\n",
@@ -98,7 +89,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
